adding playfair display font

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap');
+
 :root {
   --light-background: #fbe8cf;
   --dark-background: #ffd47d;
@@ -9,4 +11,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Playfair Display', serif;
 }
