--- a/components/CircleIcon/CircleIcon.module.css
+++ b/components/CircleIcon/CircleIcon.module.css
@@ -4,7 +4,7 @@
 }
 
 .circleIcon {
-  background-color: #eee;
+  background-color: #c4c4c4;
   display: flex;
   justify-content: center;
   align-items: center;
