section background colors is utility class now

--- a/styles/utilities.module.css
+++ b/styles/utilities.module.css
@@ -5,3 +5,11 @@
   font-size: 9rem;
   font-weight: bold;
 }
+
+.section__dark {
+  background-color: var(--dark-background);
+}
+
+.section__light {
+  background-color: var(--light-background);
+}
