--- a/styles/utilities.module.css
+++ b/styles/utilities.module.css
@@ -1,9 +1,10 @@
 .sectionHeading {
   color: var(--header-color);
-  text-align: center;
   text-transform: lowercase;
   font-size: 9rem;
   font-weight: bold;
+  line-height: 1.15;
+  margin-bottom: 1rem;
 }
 
 .section__dark {
