started on technologies, adding better image sizing to project cards

--- a/components/Projects/ProjectCard/ProjectCard.module.css
+++ b/components/Projects/ProjectCard/ProjectCard.module.css
@@ -1,13 +1,14 @@
 .projectCard {
   background-color: var(--light-background);
-  padding: 1rem;
+  padding: 2rem 1rem;
+  box-shadow: 2px 3px 2px #0006;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .projectCardImage {
-  height: 315px;
+  max-width: 90%;
 }
 
 .projectCardName {
