--- a/components/TableOfContents/TableOfContentsMenu/TableOfContentsMenu.module.css
+++ b/components/TableOfContents/TableOfContentsMenu/TableOfContentsMenu.module.css
@@ -1,37 +1,22 @@
-.menuWrapper {
+.menuExpandButton {  
   position: fixed;
   top: 0;
   left: 0;
   background-color: #0009;
-  min-height: 90px;
-  min-width: 50px;
-  z-index: 5;
-  opacity: 1;
-  transition: all 0.5s;
-  display: flex;
-  align-items: center;
-}
-
-.menuWrapper.hidden {
-  opacity: 0;
-}
-
-.menuWrapper:hover {
-  min-width: 150px;
-}
-
-.menuExpandButton {
   border: none;
-  display: flex;
   color: #fff;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
   padding: 1rem;
   cursor: pointer;
   font-size: 2rem;
   font-style: italic;
-  background-color: transparent;
+  z-index: 5;
+  opacity: 1;
+  transition: all 0.5s;
+}
+
+.menuExpandButton.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .chapterTitle {
@@ -39,5 +24,13 @@
 }
 
 .menuExpandButton:hover .chapterTitle {
-  display: inline;
+  display: inline-block;
+  margin-left: 0.5rem;
+}
+
+.menuNav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #0009;
 }
