a bit of styling to the nav menu

--- a/components/TableOfContents/TableOfContentsEntry/TableOfContentsEntry.module.css
+++ b/components/TableOfContents/TableOfContentsEntry/TableOfContentsEntry.module.css
@@ -19,6 +19,10 @@
   text-decoration: none;
 }
 
+.tableOfContentsEntry a:hover {
+  text-decoration: underline;
+}
+
 .tableOfContentsEntry p {
   font-size: 1.2rem;
 }
