--- a/components/Projects/Projects.module.css
+++ b/components/Projects/Projects.module.css
@@ -8,3 +8,13 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 3rem;
 }
+
+@media(max-width: 768px) {
+  .projects {
+    padding: 2rem;
+  }
+
+  .projectsGrid {
+    grid-template-columns: 1fr;
+  }
+}
