reduced some more font sizes, made experience section much better looking

--- a/components/Technologies/Technologies.module.css
+++ b/components/Technologies/Technologies.module.css
@@ -41,4 +41,12 @@
   .technologies {
     padding: 2rem;
   }
+
+  .technologiesGrid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .technology > div {
+    font-size: 0.75rem;
+  }
 }
