no hover pseudostyling on table of contents menu for tablet and down

--- a/components/TableOfContents/TableOfContentsMenu/TableOfContentsMenu.module.css
+++ b/components/TableOfContents/TableOfContentsMenu/TableOfContentsMenu.module.css
@@ -40,3 +40,9 @@
   background-color: #fff9;
   cursor: pointer;
 }
+
+@media(max-width: 768px) {
+  .menuExpandButton:hover .chapterTitle {
+    display: none;
+  }
+}
