--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,4 +1,7 @@
 .footer {
-  padding: 0.25rem;
+  padding: 0.5rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
