now the project name in a card is an <a>

--- a/components/Projects/ProjectCard/ProjectCard.module.css
+++ b/components/Projects/ProjectCard/ProjectCard.module.css
@@ -19,6 +19,11 @@
   margin: 1rem 0;
 }
 
+.projectCardName:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .projectCardDescription {
   font-size: 1.25rem;
 }
