--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -2,12 +2,15 @@
   opacity: 0;
   visibility: hidden;
   position: fixed;
-  top: 50%;
+  top: 25%;
   left: 50%;
+  transform: translateX(-50%);
   padding: 1rem;
   border: 1px solid #0002;
   background-color: #fff;
   z-index: 10;
+  width: 750px;
+  max-height: 80%;
 }
 
 .modal.showing {
