--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -2,14 +2,15 @@
   opacity: 0;
   visibility: hidden;
   position: fixed;
-  top: 25%;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   padding: 2rem;
   border: 1px solid #0002;
   background-color: #fff;
   z-index: 10;
   max-height: 80%;
+  overflow: scroll;
 }
 
 .modal.showing {
