mobile and tablet stylings for project detail stuff

--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -9,11 +9,17 @@
   border: 1px solid #0002;
   background-color: #fff;
   z-index: 10;
-  max-height: 80%;
+  max-height: 80vh;
   overflow: scroll;
 }
 
 .modal.showing {
   visibility: visible;
   opacity: 1;
+}
+
+@media(max-width: 500px) {
+  .modal {
+    padding: 1rem;
+  }
 }
