--- a/components/ImageSlider/ImageSlider.module.css
+++ b/components/ImageSlider/ImageSlider.module.css
@@ -49,3 +49,17 @@
 .buttonNext {
   right: 0;
 }
+
+@media(max-width: 768px) {
+  .image {
+    width: 400px;
+    height: 270px;
+  }
+}
+
+@media(max-width: 500px) {
+  .image {
+    width: 300px;
+    height: 202px;
+  }
+}
