--- a/components/Projects/ProjectDetail/ProjectDetail.module.css
+++ b/components/Projects/ProjectDetail/ProjectDetail.module.css
@@ -33,3 +33,14 @@
 .links a:hover {
   text-decoration: underline;
 }
+
+@media(max-width: 500px) {
+  .links {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .links a {
+    margin: 0.5rem 0;
+  }
+}
