--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -46,6 +46,8 @@
     padding: 0.5rem 1rem;
     cursor: pointer;
     font-size: 1rem;
+    border: 1px solid #000;
+    cursor: pointer;
   }
 }
 
