outline removed on focus on resume entry li, focus state indicated by background color change

--- a/components/ResumeList/ResumeEntry/ResumeEntry.module.css
+++ b/components/ResumeList/ResumeEntry/ResumeEntry.module.css
@@ -4,8 +4,14 @@
   cursor: pointer;
 }
 
-.resumeEntry:hover {
+.resumeEntry:hover,
+.resumeEntry:focus {
   background-color: #fceedd;
+}
+
+.resumeEntry:focus {
+  outline: none;
+
 }
 
 .resumeEntryHeadingLine {
