--- a/components/Technologies/Technologies.module.css
+++ b/components/Technologies/Technologies.module.css
@@ -4,7 +4,7 @@
 
 .technologiesGrid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-gap: 1rem;
 }
 
@@ -26,7 +26,7 @@
   width: 100%;
   height: 100%;
   background-color: #fff7;
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-weight: bold;
 }
 
@@ -35,6 +35,16 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+@media(max-width: 1000px) {
+  .technology > div {
+    font-size: 1.25rem;
+  }
+
+  .technologiesGrid {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
 
 @media(max-width: 500px) {
