--- a/components/Technologies/Technologies.module.css
+++ b/components/Technologies/Technologies.module.css
@@ -6,11 +6,18 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 1rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .technology {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 1rem;
+  height: 100%;
+  width: 100%;
 }
 
 .technology > img {
